# Electronic-Event-Based-Surveillance-System

./: .gitignore  README.md  code_base.py  main.py  plot.db  pyproject.toml  requirements.txt  search_database.db
