[tool.poetry]
name = "event-based-surveillance-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.2.0"
google-search-results = "^2.4.0"
more-itertools = "^8.12.0"
altair = "^4.1.0"
dateparser = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
